# synapse

./: .cursorrules  .env.example  .gitignore  .vercelignore  DEMO_ANALYSIS.md  DEMO_CHECKLIST.md  DEMO_PREPARATION.md  README.md  SUPERVISOR_IMPLEMENTATION.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py
docs/: AGENTIC_ARCHITECTURE_EXPLAINER.md  DEPLOYMENT_VERCEL.md  README.md  agents_v1.0.md
docs/Implementation/: AGENTS_CONSOLIDATED.md  COMMIT_HISTORY_NOTES.md  IMPLEMENTATION_STATUS.md  MVP_STORY_DETAILING.md  Merge_RepoPlan.md
docs/Planning/: DEMO_CHECKLIST.md  DEMO_PREPARATION.md  FIGMA_AGENT_MAPPING.md  ROLES.md  SYNAPSE_BACKLOG.md  UI_API_CONTRACTS.md  USER_FLOW_STORY_DETAILING.md
docs/Planning/Tech/: AGENTIC_ARCHITECTURE_EXPLAINER.md  CURRENT_ARCHITECTURE.md  LANCEDB_HYBRID_RAG_ARCHITECTURE.md  LLM_PROVIDER_SWITCHING.md  NORTH_STAR_ARCHITECTURE.md  OLLAMA_CONFIGURATION.md  SYNAPSE_ARCHITECTURE_DIAGRAM.md  TEST_FIXES_SUMMARY.md  TEST_REDESIGN_SUMMARY.md  Tech Assessment.md
scripts/: demo.py  get_linear_teams.py  health_check.py  ingest_knowledge.py  setup_demo.sh  start_local_ui_backend.sh  stop_local_ui_backend.sh
src/: __init__.py  config.py  main.py
src/adapters/: __init__.py  rate_limiter.py
src/adapters/egress/: __init__.py  jira_egress.py  linear_egress.py  mock_issue_tracker.py
src/adapters/ingress/: __init__.py  linear_ingress.py
src/adapters/llm/: __init__.py  litellm_adapter.py
src/application/handlers/: optimize_artifact_handler.py  story_writing_handler.py
src/application/queries/: __init__.py
src/application/workflows/: __init__.py  registry.py
src/cognitive_engine/: __init__.py  graph.py  invest.py  nodes.py  splitting_graph.py  state.py  story_graph.py  story_nodes.py  story_state.py
src/cognitive_engine/agents/: __init__.py  developer_agent.py  epic_analysis_agent.py  knowledge_retrieval_agent.py  orchestrator_agent.py  po_agent.py  qa_agent.py  splitting_strategy_agent.py  story_generation_agent.py  story_writer_agent.py  supervisor.py  template_parser_agent.py  validation_gap_agent.py
src/domain/: __init__.py  interfaces.py  schema.py  use_cases.py
src/infrastructure/: __init__.py  admin_store.py  di.py  prompt_library.py  queue.py  workers.py
src/infrastructure/memory/: __init__.py  context_graph_store.py  in_memory_store.py
src/infrastructure/messaging/: event_bus.py
src/ingestion/: __init__.py  chunking.py  confluence_loader.py  github_loader.py  jira_loader.py  notion_loader.py  vector_db.py
src/utils/: logger.py  prompt_monitor.py  tracing.py
tests/: conftest.py  test_adapters.py  test_agents.py  test_ingestion.py  test_smoke.py  test_workflow.py
ui/: index.html  package-lock.json  package.json
ui/src/: styles.css
ui/src/app/: App.jsx
ui/src/microfrontends/: AdminApp.jsx  EpicApp.jsx  HistoryApp.jsx  HomeApp.jsx  InitiativeApp.jsx  PromptManagementApp.jsx  StoryApp.jsx
ui/src/shared/: api.js  data.js  flows.js
