[tool.poetry]
name = "agentic-poc"
version = "0.1.0"
description = "Local-First Agentic AI System for Workflow Automation"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^0.2.0"
langchain = "^0.2.0"
langchain-core = "^0.2.27"
litellm = "^1.30.0"
lancedb = "^0.5.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

# HTTP & APIs
aiohttp = "^3.9.0"
httpx = "^0.25.0"
notion-client = "^2.2.0"
PyGithub = "^2.1.0"

# Message Queue (PoC)
redis = "^5.0.0"
rq = "^1.15.0"

# Observability
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
structlog = "^24.1.0"

# Embeddings (optional local)
sentence-transformers = {version = "^2.3.0", optional = true}

# Web Framework (for webhooks)
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
click = "^8.1.0"

[tool.poetry.extras]
local-embeddings = ["sentence-transformers"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
